2003-05-23  Mo DeJong  <mdejong@users.sourceforge.net>

	* db/Makefile.am: Remove ref to srchtbl.c.
	* db/Makefile.in: Regen.
	* db/srchtbl.c:
	* db/srchtbl.h: Moved to parsers/common
	so that each of the browsers have
	access to a hashtable implementation.
	* parsers/common/Makefile.am: Add srchtbl.c
	and srchtbl.h to libcommon_a_SOURCES.
	* parsers/common/Makefile.in: Regen.
	* parsers/common/srchtbl.c:
	* parsers/common/srchtbl.h: Moved from db.
	* parsers/cpp/cpplib/Makefile.am: Add
	parsers/common to list of include directories.
	* parsers/cpp/cpplib/Makefile.in: Regen.

2003-05-23  Mo DeJong  <mdejong@users.sourceforge.net>

	* parsers/toolbox/snptools.c (sn_getopt,
	sn_process_options): Set the report_local_vars
	global variable defined in the libcommon.a
	when the -l option is passed to a SN parser.
	This allows xrefs to global variables to
	be written by a toolbox based parser.

2003-05-23  Mo DeJong  <mdejong@users.sourceforge.net>

	* parsers/cpp/cbrowser2.c (main): Fix the -l
	option so that it does not require an
	argument. This fixes a problem when xref
	was not running when local vars is enabled.

2003-05-22  Mo DeJong  <mdejong@users.sourceforge.net>

	* parsers/php/phpbrowser.c: Regen.
	* parsers/php/phpbrowser.l: Add include
	file support. The browser recognizes
	the include, include_once, require, and
	require_once keywords.
	* tests/parsers/php.test: Add a series of
	include keyword tests.

2003-05-22  Mo DeJong  <mdejong@users.sourceforge.net>

	* parsers/php/phpbrowser.c: Regen.
	* parsers/php/phpbrowser.l: Add a simple debug
	dump function that can be used to print out
	matched rules and text as they are made.

2003-05-22  Mo DeJong  <mdejong@users.sourceforge.net>

	* parsers/m4/m4browser.c: Regen.
	* parsers/m4/m4browser.l: Pass SN_FUNC_DEF
	as the second argument to sn_insert_xref
	for a global variable access. The docs
	indicate the SN_REF_TO_GLOB_VAR was not
	a valid context to be passing there.
	* parsers/php/phpbrowser.c: Regen.