@@ -1,5 +1,12 @@
 2003-05-23  Mo DeJong  <mdejong@users.sourceforge.net>
 
+	* gui/misc.tcl (load_xref_pipe): Switch xref
+	pipe back to blocking mode before closing
+	so that stderr messages are not lost due to
+	a nasty Tcl bug.
+
+2003-05-23  Mo DeJong  <mdejong@users.sourceforge.net>
+
 	* db/Makefile.am: Remove ref to srchtbl.c.
 	* db/Makefile.in: Regen.
 	* db/srchtbl.c:
